# contrx

./: README.md
.githooks/: pre-commit
client/: biome.json  index.html  package.json  pnpm-lock.yaml  postcss.config.js
client/src/: App.tsx  main.tsx  router.tsx  theme.tsx
client/src/components/: auth-guard.tsx  contract-approvers.tsx  create-clause-form.tsx  create-contract-form.tsx  create-counterparty-form.tsx  create-organization-form.tsx  edit-clause-form.tsx  edit-organization-form.tsx  (+11 more)
server/: Cargo.toml  config.example.yaml  sample.env
server/.sqlx/: query-5571f632f1c41793e0b91a407777766eb3bdd51ffb2ab92c097242837a1a44e7.json  query-95df876279ff51845286981b0132278c428cddca71f59a47c4dd9ce5b4f9d83c.json  query-ec92d1083ee94744276bfb4dcd43675c0ec06cdb49c012853f7d53fecd698d1c.json
server/migrations/: 20240124163712_create_users_table.sql  20240205050604_create_sessions_table.sql  20240505102507_create_organizations_table.sql  20240505102749_create_users_organizations_table.sql  20240505102844_create_counterparties_table.sql  20240505103009_create_clauses_table.sql  20240505103211_create_organizations_clauses_table.sql  20240505103359_create_contract_types_table.sql  20240505103684_create_contracts_table.sql  20240505103844_create_contract_clauses_table.sql  20240513061351_create_contacts_table.sql  20240516034107_create_contract_approvers_table.sql  20240520032324_create_notifications_table.sql
server/src/: config.rs  database.rs  error.rs  lib.rs  main.rs
server/src/constants/: countries.rs
server/src/domain/: mod.rs  pagination.rs
server/src/domain/auth/: mod.rs
server/src/domain/clause/: mod.rs
server/src/domain/contract/: mod.rs  party.rs
server/src/domain/notification/: mod.rs
server/src/domain/organization/: mod.rs
server/src/domain/template/: mod.rs
server/src/domain/user/: email.rs  mod.rs  name.rs  password.rs
server/src/middleware/: auth.rs
server/src/routes/: auth.rs  clauses.rs  contracts.rs  mod.rs  notifications.rs  organizations.rs  templates.rs  users.rs
server/tests/: test_auth.rs  test_health.rs  test_users.rs
server/tests/common/: mock.rs  mod.rs
server/tests/integration/: main.rs  test_auth.rs  test_health.rs  test_users.rs
server/tests/integration/common/: mod.rs
(+48 files in other folders)
