[package]
name = "contrx-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["protobuf"] }
prost = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
sqlx = { version = "0.7.3", features = ["uuid", "postgres", "time", "runtime-tokio-rustls"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["timeout", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4"] }
