[package]
name = "contrx-server"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.7.4", features = ["macros"] }
jsonwebtoken = "9.2.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["raw_value"] }
serde_yaml = "0.9.30"
sqlx = { version = "0.7.3", features = ["uuid", "postgres", "time", "runtime-tokio-rustls"] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.4.13"
tower-cookies = "0.10.0"
tower-http = { version = "0.5.1", features = ["cors", "timeout", "trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }

[dev-dependencies]
fake = "2.9.2"
